--- a/ElectronsFlaskTest/html/idea_visualization.html
+++ b/ElectronsFlaskTest/html/idea_visualization.html
@@ -13,35 +13,45 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
  </head>
  <body style="padding-top: 65px;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="session.html">Back</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="sessionIdeas.html">Element compression</a>
-        </li>
-        <li class="nav-item active">
-              <a class="nav-link" href="sessionVoting.html">Voting</a>
-          </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="questions.html">General</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="estructura_campo.html">Campo</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="categories.html">Categories</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
-        </li>
-      </ul>
-    </nav>
     <div class="container-fluid" style="font-family: 'Roboto';">
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="session.html">Back</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="sessionIdeas.html">Element compression</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="sessionVoting.html">Voting</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="questions.html">General structure</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="estructura_campo.html">Category structure</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="prioridades_preguntas.html">Priority structure</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="idea_visualization.html">Resulting general structure</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="categories.html">Resulting categories</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
       <div id="canvas" style="align-content: center;"></div>
       <div id="warning" style="display: none;"><h1>¡No se ha realizado la estructuración general!</h1></div>
     </div>
