--- a/ElectronsFlaskTest/html/sessionIdeas.html
+++ b/ElectronsFlaskTest/html/sessionIdeas.html
@@ -12,39 +12,44 @@
 	</head>
 	<body style="padding-top: 65px">
 		<div class="container-fluid" style="font-family: 'Roboto', sans-serif; height: 90vh; width: 100%; overflow-y: scroll">
-			<div class=" mt-auto container-fluid col-sm-12">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="session.html">Back</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="sessionIdeas.html">Element compression</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="sessionVoting.html">Voting</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="questions.html">General</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="estructura_campo.html">Campo</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="categories.html">Categories</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="idea_visualization.html">Idea Visualization</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
+			<div class="row">
+			  <div class="col-md-12">
+			    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			      <ul class="navbar-nav">
+			        <li class="nav-item active">
+			          <a class="nav-link" href="session.html">Back</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="sessionIdeas.html">Element compression</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="sessionVoting.html">Voting</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="questions.html">General structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="estructura_campo.html">Category structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="prioridades_preguntas.html">Priority structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="idea_visualization.html">Resulting general structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="categories.html">Resulting categories</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
+			        </li>
+			      </ul>
+			    </nav>
+			  </div>
+			</div>
 			<div class="row">
 				<div class="col-12">
 					<h2>Element compression</h2>
