--- a/ElectronsFlaskTest/html/sessionVoting.html
+++ b/ElectronsFlaskTest/html/sessionVoting.html
@@ -8,12 +8,10 @@
 		<title>MEI</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<link href="../styles/projects.css" rel="stylesheet">
-		<link href="../styles/login.css" rel="stylesheet">
 	</head>
-	<body style="padding-top: 100px">
+	<body style="padding-top: 105px">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			<ul class="navbar-nav">
 				<li class="nav-item active">
 					<a class="nav-link" href="session.html">Back</a>
 				</li>
@@ -27,16 +25,22 @@
 			    <a class="nav-link" href="sessionVoting.html">Voting</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="questions.html">General</a>
+					<a class="nav-link" href="questions.html">General structure</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="estructura_campo.html">Campo</a>
+					<a class="nav-link" href="estructura_campo.html">Category structure</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="categories.html">Categories</a>
+					<a class="nav-link" href="prioridades_preguntas.html">Priority structure</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
+					<a class="nav-link" href="idea_visualization.html">Resulting general structure</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="categories.html">Resulting categories</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
 				</li>
 			</ul>
 		</nav>
