--- a/ElectronsFlaskTest/html/triggeringQuestion.html
+++ b/ElectronsFlaskTest/html/triggeringQuestion.html
@@ -11,42 +11,46 @@
 		<link href="../styles/sessionIdea.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	</head>
-	<body style="padding-top: 65px">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="session.html">Back</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="sessionIdeas.html">Element compression</a>
-				</li>
-				<li class="nav-item active">
-			    <a class="nav-link" href="sessionVoting.html">Voting</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="questions.html">General</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="estructura_campo.html">Campo</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="categories.html">Categories</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="prioridades_preguntas.html">Prioridades</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="idea_visualization.html">Visualización</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="priority_visualization.html">Visualización de prioridades</a>
-				</li>
-			</ul>
-		</nav>
+	<body style="padding-top: 85px">
 		<div class="container-fluid">
+			<div class="row">
+			  <div class="col">
+			    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			      <ul class="navbar-nav">
+			        <li class="nav-item active">
+			          <a class="nav-link" href="session.html">Back</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="triggeringQuestion.html">Triggering question</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="sessionIdeas.html">Element compression</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="sessionVoting.html">Voting</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="questions.html">General structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="estructura_campo.html">Category structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="prioridades_preguntas.html">Priority structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="idea_visualization.html">Resulting general structure</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="categories.html">Resulting categories</a>
+			        </li>
+			        <li class="nav-item active">
+			          <a class="nav-link" href="priority_visualization.html">Resulting priorities</a>
+			        </li>
+			      </ul>
+			    </nav>
+			  </div>
+			</div>
 			<div class="row">
 				<div class="col">
 					<div id="projectSessions" style="height: 40%;">
@@ -137,7 +141,7 @@
 		</div>
 		<!-- https://stackoverflow.com/questions/32621988/electron-jquery-is-not-defined -->
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-		<!-- <script src="../js/jquery.js"></script>-->
+		<!--<script src="../js/jquery.js"></script>-->
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 		<script src="../js/triggeringQuestion.js"></script>
